crates/plan/tests/snapshots/fixtures__sqlite_full_scan.snap
---
source: crates/plan/tests/fixtures.rs
expression: render(&sqlite(&name))
---
Sqlite Estimated
#0 Table Scan on orders est=- act=- loops=-
findings:
  Low FullScan node=Some(0): Table Scan on orders | Reads every row (the plan has no row counts). | Add an index on the filtered or joined columns, or narrow the query.
